--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: List files (debug)
-        run: ls -la
+        run: ls -la && find . -maxdepth 4 -type f -name "settings.gradle" -print
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -27,17 +27,19 @@ jobs:
       - name: Accept SDK licenses
         run: yes | sdkmanager --licenses
 
+      # Newer Gradle setup action (replaces gradle/gradle-build-action)
       - name: Set up Gradle
-        uses: gradle/gradle-build-action@v3
-        with:
-          gradle-version: 8.9
+        uses: gradle/actions/setup-gradle@v3
 
-      - name: Build debug APK
-        run: gradle assembleDebug
-        working-directory: CutCoachRepo   # <-- put the folder that contains settings.gradle
+      - name: Build debug APK (auto-detect project dir)
+        run: |
+          PROJ_DIR="$(dirname "$(find . -type f -name settings.gradle | head -n1)")"
+          echo "Project directory: $PROJ_DIR"
+          cd "$PROJ_DIR"
+          gradle assembleDebug
 
-      - name: Upload APK artifact
+      - name: Upload APK artifact (find it anywhere)
         uses: actions/upload-artifact@v4
         with:
           name: CutCoach-debug-apk
-          path: CutCoachRepo/app/build/outputs/apk/debug/app-debug.apk
+          path: "**/app/build/outputs/apk/debug/app-debug.apk"
