--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,12 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Debug: list repo and locate settings.gradle
-        run: |
-          echo "PWD=$(pwd)"
-          ls -la
-          echo "Searching for settings.gradle..."
-          find . -type f -name settings.gradle -print
+      - name: Show repo files (debug)
+        run: ls -la
+
+      - name: Locate settings.gradle (debug)
+        run: find . -maxdepth 4 -type f -name "settings.gradle" -print
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -28,25 +27,22 @@ jobs:
       - name: Install Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Install Android SDK components
+        run: sdkmanager --install "platforms;android-34" "build-tools;34.0.0" "platform-tools" "cmdline-tools;latest"
+
       - name: Accept SDK licenses
         run: yes | sdkmanager --licenses
 
-      # Use supported Gradle for AGP 8.5.x
-      - name: Set up Gradle (8.7)
+      - name: Set up Gradle 8.7
         uses: gradle/actions/setup-gradle@v3
         with:
           gradle-version: 8.7
 
       - name: Build debug APK (auto-detect project dir)
-        run: |
-          PROJ_DIR="$(dirname "$(find . -type f -name settings.gradle | head -n1)")"
-          echo "Project directory: $PROJ_DIR"
-          cd "$PROJ_DIR"
-          gradle --version
-          gradle assembleDebug --stacktrace
+        run: PROJ_DIR="$(dirname "$(find . -type f -name settings.gradle | head -n1)")"; echo "Project dir: $PROJ_DIR"; if [ -z "$PROJ_DIR" ]; then echo "ERROR: settings.gradle not found"; exit 1; fi; cd "$PROJ_DIR"; gradle --version; gradle assembleDebug --stacktrace --info
 
-      - name: Upload APK artifact (glob)
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: CutCoach-debug-apk
-          path: "**/app/build/outputs/apk/debug/app-debug.apk"
+          path: "**/app/build/outputs/apk/debug/*.apk"
